Update canonical URLs

--- a/content/blog/beginner-guide-testing-react-apps/index.mdx
+++ b/content/blog/beginner-guide-testing-react-apps/index.mdx
@@ -5,6 +5,7 @@ description: Testing apps can be painful, but it doesn't have to be that way. Le
 date: "2019-10-09"
 cover: "./cover.jpg"
 tags: [react, test]
+canonical: https://medium.com/better-programming/the-complete-beginners-guide-to-testing-react-apps-10964f515bec
 ---
 
 **Updated on 28 Aug. 2020**
