--- a/content/blog/how-to-build-reusable-and-accessible-switch-vue/index.mdx
+++ b/content/blog/how-to-build-reusable-and-accessible-switch-vue/index.mdx
@@ -5,6 +5,7 @@ date: "2020-08-24"
 cover: "./cover.jpg"
 coverCredit: Photo by Rodolfo Clix on Pexels
 tags: [vue]
+canonical: https://medium.com/better-programming/how-to-build-a-reusable-and-accessible-toggle-switch-with-vue-js-4de38634d39f
 ---
 
 There are a lot of different UI components you can find on an app. The ones you'll find the most will probably be buttons, inputs, forms, or images. They are so common that HTML even provides default elements for them! However, it's not rare to encounter lesser-known components that you have to build by yourself.
