--- a/content/blog/how-to-get-better-at-writing-css/index.mdx
+++ b/content/blog/how-to-get-better-at-writing-css/index.mdx
@@ -5,6 +5,7 @@ date: "2018-07-17"
 cover: "./cover.jpg"
 next: /how-to-make-a-list-responsive/
 tags: [css]
+canonical: https://thomlom.medium.com/how-to-get-better-at-writing-css-a1732c32a72f
 ---
 
 Let’s not beat around the bush: writing great CSS code can be painful.
