--- a/content/blog/soft-skills-developers/index.mdx
+++ b/content/blog/soft-skills-developers/index.mdx
@@ -5,6 +5,7 @@ date: "2019-06-03"
 cover: "./cover.jpg"
 next: /time-management-productivity-developers/
 tags: [career]
+canonical: https://thomlom.medium.com/soft-skills-every-developer-should-have-5c9262e95c53
 ---
 
 A few weeks ago, I interviewed someone who wants to become a developer. He was concerned about the fact that he wasn't good enough technically and that he will never be. _"What makes a great developer in your opinion?"_ he asked me. I answered briefly: _"A great developer must have technical skills, it's undeniable. But what really makes you great are your soft skills"_.
