--- a/content/blog/time-management-productivity-developers/index.mdx
+++ b/content/blog/time-management-productivity-developers/index.mdx
@@ -6,6 +6,7 @@ date: "2019-06-28"
 cover: "./cover.jpg"
 next: /soft-skills-developers/
 tags: [productivity, career]
+canonical: https://thomlom.medium.com/time-management-and-productivity-tips-for-developers-2ff9cee236f1
 ---
 
 A few weeks ago, I published a post about [Soft skills every developer should have](https://thomlom.dev/soft-skills-developers/). I’d like to focus on one of them today: **organisation** and to some extent **productivity**. It’s an important skill to have for many reasons:
