--- a/content/blog/what-you-should-know-about-js-arrays/index.mdx
+++ b/content/blog/what-you-should-know-about-js-arrays/index.mdx
@@ -5,6 +5,7 @@ date: "2019-03-10"
 cover: "./cover.jpeg"
 tags: [javascript]
 next: /object-array-destructuring-javascript/
+canonical: https://thomlom.medium.com/what-you-should-know-about-javascript-arrays-a7e5394f78f8
 ---
 
 Let me make a bold statement: **for loops are often useless and make the code hard to read**. When it comes to iterating over an array, finding elements, sorting it or whatever you want, there's probably an array method out there that you can use.
@@ -26,10 +27,10 @@ You'll use that one a lot. Basically, every time you need to modify the elements
 It takes one parameter: a function that is called on every element of the array. And it returns a **new array**, so no side effects here.
 
 ```javascript
-const numbers = [1, 2, 3, 4]
+const numbers = [1, 2, 3, 4];
 
-const numbersPlusOne = numbers.map((n) => n + 1) // Adds one to every element
-console.log(numbersPlusOne) // [2, 3, 4, 5]
+const numbersPlusOne = numbers.map((n) => n + 1); // Adds one to every element
+console.log(numbersPlusOne); // [2, 3, 4, 5]
 ```
 
 You can also create a new array that keeps only one particular property of an object:
@@ -39,10 +40,10 @@ const allActivities = [
   { title: "My activity", coordinates: [50.123, 3.291] },
   { title: "Another activity", coordinates: [1.238, 4.292] },
   // etc.
-]
+];
 
-const allCoordinates = allActivities.map((activity) => activity.coordinates)
-console.log(allCoordinates) // [[50.123, 3.291], [1.238, 4.292]]
+const allCoordinates = allActivities.map((activity) => activity.coordinates);
+console.log(allCoordinates); // [[50.123, 3.291], [1.238, 4.292]]
 ```
 
 So, remember, whenever you need to **transform** an array, think of using **map**.
@@ -61,9 +62,9 @@ Then you'll have a shiny new array with the elements you wanted to keep.
 For example, you can keep just the odd numbers in an array:
 
 ```javascript
-const numbers = [1, 2, 3, 4, 5, 6]
-const oddNumbers = numbers.filter((n) => n % 2 !== 0)
-console.log(oddNumbers) // [1, 3, 5]
+const numbers = [1, 2, 3, 4, 5, 6];
+const oddNumbers = numbers.filter((n) => n % 2 !== 0);
+console.log(oddNumbers); // [1, 3, 5]
 ```
 
 Or you can also use it to remove a particular item in an array:
@@ -73,13 +74,13 @@ const participants = [
   { id: "a3f47", username: "john" },
   { id: "fek28", username: "mary" },
   { id: "n3j44", username: "sam" },
-]
+];
 
 function removeParticipant(participants, id) {
-  return participants.filter((participant) => participant.id !== id)
+  return participants.filter((participant) => participant.id !== id);
 }
 
-console.log(removeParticipant(participants, "a3f47")) //  [{ id: 'fek28', username: 'mary' }, { id: 'n3j44', username: 'sam' }];
+console.log(removeParticipant(participants, "a3f47")); //  [{ id: 'fek28', username: 'mary' }, { id: 'n3j44', username: 'sam' }];
 ```
 
 ### reduce
@@ -98,9 +99,9 @@ Most of the time, you'll just use the first two parameters: the accumulator and 
 Let's not be too theoretical. Here is the most common example of `reduce`:
 
 ```javascript
-const numbers = [37, 12, 28, 4, 9]
-const total = numbers.reduce((total, n) => total + n)
-console.log(total) // 90
+const numbers = [37, 12, 28, 4, 9];
+const total = numbers.reduce((total, n) => total + n);
+console.log(total); // 90
 ```
 
 On the first iteration, the accumulator, which is `total`, takes an initial value of 37. The returned value is 37 + `n` and `n` is equal to 12, thus 49. On the second iteration, the the accumulator is equal to 49, the returned value is 49 + 28 = 77. And so on and so forth.
@@ -110,19 +111,19 @@ On the first iteration, the accumulator, which is `total`, takes an initial valu
 ```javascript
 const map = (arr, fn) => {
   return arr.reduce((mappedArr, element) => {
-    return [...mappedArr, fn(element)]
-  }, [])
-}
+    return [...mappedArr, fn(element)];
+  }, []);
+};
 
-console.log(map([1, 2, 3, 4], (n) => n + 1)) // [2, 3, 4, 5]
+console.log(map([1, 2, 3, 4], (n) => n + 1)); // [2, 3, 4, 5]
 
 const filter = (arr, fn) => {
   return arr.reduce((filteredArr, element) => {
-    return fn(element) ? [...filteredArr, element] : [...filteredArr]
-  }, [])
-}
+    return fn(element) ? [...filteredArr, element] : [...filteredArr];
+  }, []);
+};
 
-console.log(filter([1, 2, 3, 4, 5, 6], (n) => n % 2 === 0)) // [1, 3, 5]
+console.log(filter([1, 2, 3, 4, 5, 6], (n) => n % 2 === 0)); // [1, 3, 5]
 ```
 
 Basically, we gave `reduce` an initial value of `[]`: our accumulator. For `map`, we ran a function whose result is added at then end of the accumulator thanks to the **spread operator** (we'll see it just after, don't worry.). For `filter`, it's nearly the same except that we ran the filter function on the element. If it returns true, we return the **previous** array, otherwise we add the element to the end of the array.
@@ -134,11 +135,11 @@ function flatDeep(arr) {
   return arr.reduce((flattenArray, element) => {
     return Array.isArray(element)
       ? [...flattenArray, ...flatDeep(element)]
-      : [...flattenArray, element]
-  }, [])
+      : [...flattenArray, element];
+  }, []);
 }
 
-console.log(flatDeep([1, 2, 3, [4, [[[5, [6, 7]]]], 8]])) // [1, 2, 3, 4, 5, 6, 7, 8]
+console.log(flatDeep([1, 2, 3, [4, [[[5, [6, 7]]]], 8]])); // [1, 2, 3, 4, 5, 6, 7, 8]
 ```
 
 This example is similar to `map` except that here we make use of recursion. I won't explain it because it's outside the scope of this article. However, if you want to know more about recursion, check out this [resource](https://www.freecodecamp.org/news/recursion-is-not-hard-858a48830d83/).
@@ -148,13 +149,13 @@ This example is similar to `map` except that here we make use of recursion. I wo
 I agree, this is not a method. However, using the spread operator can help you achieve many things when working with arrays. In fact, you can use it to expand the values of an array in another array. From that point, you can make a copy of an array or concatenate multiple arrays.
 
 ```javascript
-const numbers = [1, 2, 3]
-const numbersCopy = [...numbers]
-console.log(numbersCopy) // [1, 2, 3]
+const numbers = [1, 2, 3];
+const numbersCopy = [...numbers];
+console.log(numbersCopy); // [1, 2, 3]
 
-const otherNumbers = [4, 5, 6]
-const numbersConcatenated = [...numbers, ...otherNumbers]
-console.log(numbersConcatenated) // [1, 2, 3, 4, 5, 6]
+const otherNumbers = [4, 5, 6];
+const numbersConcatenated = [...numbers, ...otherNumbers];
+console.log(numbersConcatenated); // [1, 2, 3, 4, 5, 6]
 ```
 
 **Caution**: the spread operator does a **shallow copy** of the original array. But what does **shallow** mean? 🤔
@@ -162,18 +163,18 @@ console.log(numbersConcatenated) // [1, 2, 3, 4, 5, 6]
 Well, a shallow copy will duplicate the original elements as little as possible. So when you have an array containing numbers, strings or booleans (**primitive types**), there's no problem, values are really duplicated. However, this is not the same for **objects** or **arrays**. Only the **reference** to the original value will be copied! Therefore, if you make a shallow copy of an array containing an object and that you modify the object in the copied array, it will also modify the object in the original array since they have the **same reference**.
 
 ```javascript
-const arr = ["foo", 42, { name: "Thomas" }]
-let copy = [...arr]
+const arr = ["foo", 42, { name: "Thomas" }];
+let copy = [...arr];
 
-copy[0] = "bar"
+copy[0] = "bar";
 
-console.log(arr) // No mutations: ["foo", 42, { name: "Thomas" }]
-console.log(copy) // ["bar", 42, { name: "Thomas" }]
+console.log(arr); // No mutations: ["foo", 42, { name: "Thomas" }]
+console.log(copy); // ["bar", 42, { name: "Thomas" }]
 
-copy[2].name = "Hello"
+copy[2].name = "Hello";
 
-console.log(arr) // /!\ MUTATION ["foo", 42, { name: "Hello" }]
-console.log(copy) // ["bar", 42, { name: "Hello" }]
+console.log(arr); // /!\ MUTATION ["foo", 42, { name: "Hello" }]
+console.log(copy); // ["bar", 42, { name: "Hello" }]
 ```
 
 So, if you want to make a "real" copy of an array that contains object or arrays, you can use a lodash function like [cloneDeep](https://lodash.com/docs/#cloneDeep). But don't feel like you have to do such a thing. The goal here is to **be aware of how things work under the hood**.
@@ -187,9 +188,9 @@ You'fll find below other methods that are good to know and that can help you wit
 Have you ever used `indexOf` to know if something is in an array or not? Awful way to do it right? Luckily for us, `includes` does that for us. Give a parameter to `includes` and it will search in the array if the element exists.
 
 ```javascript
-const sports = ["football", "archery", "judo"]
-const hasFootball = sports.includes("football")
-console.log(hasFootball) // true
+const sports = ["football", "archery", "judo"];
+const hasFootball = sports.includes("football");
+console.log(hasFootball); // true
 ```
 
 ### concat
@@ -197,18 +198,18 @@ console.log(hasFootball) // true
 The concat method can be used to merge two or more arrays.
 
 ```javascript
-const numbers = [1, 2, 3]
-const otherNumbers = [4, 5, 6]
+const numbers = [1, 2, 3];
+const otherNumbers = [4, 5, 6];
 
-const numbersConcatenated = numbers.concat(otherNumbers)
-console.log(numbersConcatenated) // [1, 2, 3, 4, 5, 6]
+const numbersConcatenated = numbers.concat(otherNumbers);
+console.log(numbersConcatenated); // [1, 2, 3, 4, 5, 6]
 
 // You can merge as many arrays as you want
 function concatAll(arr, ...arrays) {
-  return arr.concat(...arrays)
+  return arr.concat(...arrays);
 }
 
-console.log(concatAll([1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12])) // [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+console.log(concatAll([1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12])); // [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
 ```
 
 ### forEach
@@ -216,8 +217,8 @@ console.log(concatAll([1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12])) // [1, 2, 
 Whenever you want to execute something for each array element, you'll want to use `forEach`. It takes a function as a parameter that takes itself three parameters: the current value, the index and the array:
 
 ```javascript
-const numbers = [1, 2, 3, 4, 5]
-numbers.forEach(console.log)
+const numbers = [1, 2, 3, 4, 5];
+numbers.forEach(console.log);
 // 1 0 [ 1, 2, 3 ]
 // 2 1 [ 1, 2, 3 ]
 // 3 2 [ 1, 2, 3 ]
@@ -228,10 +229,10 @@ numbers.forEach(console.log)
 It is used to return the first index at which a given element can be found in the array. `indexOf` was also widely used to check whether an element is in an `array` or not. To be honest, I don't use it that much as of today.
 
 ```javascript
-const sports = ["football", "archery", "judo"]
+const sports = ["football", "archery", "judo"];
 
-const judoIndex = sports.indexOf("judo")
-console.log(judoIndex) // 2
+const judoIndex = sports.indexOf("judo");
+console.log(judoIndex); // 2
 ```
 
 ### find
@@ -243,10 +244,10 @@ const users = [
   { id: "af35", name: "john" },
   { id: "6gbe", name: "mary" },
   { id: "932j", name: "gary" },
-]
+];
 
-const user = users.find((user) => user.id === "6gbe")
-console.log(user) // { id: '6gbe', name: 'mary' }
+const user = users.find((user) => user.id === "6gbe");
+console.log(user); // { id: '6gbe', name: 'mary' }
 ```
 
 So use `filter` when you want to... well filter your **whole** array. Use `find` when you're sure you're searching for a **unique** element in your array.
@@ -260,10 +261,10 @@ const users = [
   { id: "af35", name: "john" },
   { id: "6gbe", name: "mary" },
   { id: "932j", name: "gary" },
-]
+];
 
-const user = users.findIndex((user) => user.id === "6gbe")
-console.log(user) // 1
+const user = users.findIndex((user) => user.id === "6gbe");
+console.log(user); // 1
 ```
 
 You may think that `findIndex` is the same as `indexOf`. Well... not exactly. The first parameter of `indexOf` is a primitive value (boolean, number, string, null, undefined or a symbol) while the first parameter of `findIndex` is a callback function.
@@ -275,8 +276,8 @@ So when you need to search the index of an element in an array of primitive valu
 Whenever you need to take a portion of an array or copy an array, you can use `slice`. But be careful, just like the spread operator, `slice` returns a **shallow copy** of that portion!
 
 ```javascript
-const numbers = [1, 2, 3, 4, 5]
-const copy = numbers.slice()
+const numbers = [1, 2, 3, 4, 5];
+const copy = numbers.slice();
 ```
 
 I said at the beginning of an article that for loops were often useless. Let me give you an example of how you can get rid of one.
@@ -286,15 +287,15 @@ Let's say you want to retrieve a certain amount of chat messages from an API and
 ```javascript
 // The "traditional way" to do it:
 // Determine the number of messages to take and use a for loop
-const nbMessages = messages.length < 5 ? messages.length : 5
-let messagesToShow = []
+const nbMessages = messages.length < 5 ? messages.length : 5;
+let messagesToShow = [];
 for (let i = 0; i < nbMessages; i++) {
-  messagesToShow.push(posts[i])
+  messagesToShow.push(posts[i]);
 }
 
 // Even if "arr" has less than 5 elements,
 // slice will return an entire shallow copy of the original array
-const messagesToShow = messages.slice(0, 5)
+const messagesToShow = messages.slice(0, 5);
 ```
 
 ### some
@@ -317,12 +318,12 @@ const users = [
     id: "18aa",
     permissions: ["delete", "read", "write"],
   },
-]
+];
 
 const hasDeletePermission = users.some((user) =>
   user.permissions.includes("delete")
-)
-console.log(hasDeletePermission) // true
+);
+console.log(hasDeletePermission); // true
 ```
 
 ### every
@@ -343,12 +344,12 @@ const users = [
     id: "18aa",
     permissions: ["delete", "read", "write"],
   },
-]
+];
 
 const hasAllReadPermission = users.every((user) =>
   user.permissions.includes("read")
-)
-console.log(hasAllReadPermission) // false
+);
+console.log(hasAllReadPermission); // false
 ```
 
 ### flat (ES2019)
@@ -356,17 +357,17 @@ console.log(hasAllReadPermission) // false
 These are the brand new methods that are coming in the JavaScript world. Basically, `flat` creates a new array by concatenating all sub-array elements into it. It accepts one parameter, a number, which represents how deep you want to flatten your array:
 
 ```javascript
-const numbers = [1, 2, [3, 4, [5, [6, 7]], [[[[8]]]]]]
+const numbers = [1, 2, [3, 4, [5, [6, 7]], [[[[8]]]]]];
 
-const numbersflattenOnce = numbers.flat()
-console.log(numbersflattenOnce) // [1, 2, 3, 4, Array[2], Array[1]]
+const numbersflattenOnce = numbers.flat();
+console.log(numbersflattenOnce); // [1, 2, 3, 4, Array[2], Array[1]]
 // Note: Array[2] means it's a two-dimensional array
 
-const numbersflattenTwice = numbers.flat(2)
-console.log(numbersflattenTwice) // [1, 2, 3, 4, 5, Array[2], Array[1]]
+const numbersflattenTwice = numbers.flat(2);
+console.log(numbersflattenTwice); // [1, 2, 3, 4, 5, Array[2], Array[1]]
 
-const numbersFlattenInfinity = numbers.flat(Infinity)
-console.log(numbersFlattenInfinity) // [1, 2, 3, 4, 5, 6, 7, 8]
+const numbersFlattenInfinity = numbers.flat(Infinity);
+console.log(numbersFlattenInfinity); // [1, 2, 3, 4, 5, 6, 7, 8]
 ```
 
 ### flatMap (ES2019)
@@ -380,10 +381,10 @@ const sentences = [
   "This is a sentence",
   "This is another sentence",
   "I can't find any original phrases",
-]
+];
 
-const allWords = sentences.flatMap((sentence) => sentence.split(" "))
-console.log(allWords) // ["This", "is", "a", "sentence", "This", "is", "another", "sentence", "I", "can't", "find", "any", "original", "phrases"]
+const allWords = sentences.flatMap((sentence) => sentence.split(" "));
+console.log(allWords); // ["This", "is", "a", "sentence", "This", "is", "another", "sentence", "I", "can't", "find", "any", "original", "phrases"]
 ```
 
 In this example, you have many sentences in an array and you want to get all the words. Instead of using `map` to split all the sentences into words and then flatten the array, you can directly use `flatMap`.
@@ -392,10 +393,10 @@ Nothing to do with `flatMap`, but you can then count the number of words with th
 
 ```javascript
 const wordsCount = allWords.reduce((count, word) => {
-  count[word] = count[word] ? count[word] + 1 : 1
-  return count
-}, {})
-console.log(wordsCount) // { This: 2, is: 2, a: 1, sentence: 2, another: 1, I: 1, "can't": 1, find: 1, any: 1, original: 1, phrases: 1, }
+  count[word] = count[word] ? count[word] + 1 : 1;
+  return count;
+}, {});
+console.log(wordsCount); // { This: 2, is: 2, a: 1, sentence: 2, another: 1, I: 1, "can't": 1, find: 1, any: 1, original: 1, phrases: 1, }
 ```
 
 `flatMap` is also often used in Reactive Programming, you can see an example of it [on ReactiveX's docs](http://reactivex.io/documentation/operators/flatmap.html).
@@ -407,9 +408,9 @@ If you need to create a string based on the array's elements, you're looking for
 For example, you can display at a glance all the participants of an activity using `join`:
 
 ```javascript
-const participants = ["john", "mary", "gary"]
-const participantsFormatted = participants.join(", ")
-console.log(participantsFormatted) // john, mary, gary
+const participants = ["john", "mary", "gary"];
+const participantsFormatted = participants.join(", ");
+console.log(participantsFormatted); // john, mary, gary
 ```
 
 Here is a more real-word example where you may want to filter the participants before and get their name:
@@ -420,14 +421,14 @@ const potentialParticipants = [
   { id: "baf3", name: "mary", age: 13 },
   { id: "a111", name: "gary", age: 24 },
   { id: "fx34", name: "emma", age: 34 },
-]
+];
 
 const participantsFormatted = potentialParticipants
   .filter((user) => user.age > 18)
   .map((user) => user.name)
-  .join(", ")
+  .join(", ");
 
-console.log(participantsFormatted) // gary, emma
+console.log(participantsFormatted); // gary, emma
 ```
 
 ### from
@@ -435,8 +436,8 @@ console.log(participantsFormatted) // gary, emma
 This is a **static** method that creates a new Array from an array-like or iterable object like a string for example. It can be useful when you're working with the dom.
 
 ```javascript
-const nodes = document.querySelectorAll(".todo-item") // this is an instance of NodeList, you can't use array methods with it
-const todoItems = Array.from(nodes) // now, you can use map, filter, etc. as you're workin with an array!
+const nodes = document.querySelectorAll(".todo-item"); // this is an instance of NodeList, you can't use array methods with it
+const todoItems = Array.from(nodes); // now, you can use map, filter, etc. as you're workin with an array!
 ```
 
 Have you seen that we used `Array` instead of an array instance? That's why `from` is called a static method.
@@ -446,9 +447,9 @@ Then you can have fun with these nodes and for example registering an event list
 ```javascript
 todoItems.forEach((item) => {
   item.addEventListener("click", function () {
-    alert(`You clicked on ${item.innerHTML}`)
-  })
-})
+    alert(`You clicked on ${item.innerHTML}`);
+  });
+});
 ```
 
 ### isArray
@@ -458,10 +459,10 @@ While we're at it, let's talk about another static method of `Array` which is `i
 Based on the previous example, this is what we get:
 
 ```javascript
-const nodes = document.querySelectorAll(".todo-item")
-console.log(Array.isArray(nodes)) // false
-const todoItems = Array.from(nodes)
-console.log(Array.isArray(todoItems)) // true
+const nodes = document.querySelectorAll(".todo-item");
+console.log(Array.isArray(nodes)); // false
+const todoItems = Array.from(nodes);
+console.log(Array.isArray(todoItems)); // true
 ```
 
 ## Good to know but mutating
@@ -471,8 +472,8 @@ You'll find below other common array methods. The difference is that they modify
 For all these methods, if you don't want to mutate the original array, just make a shallow copy or deep copy beforehand:
 
 ```javascript
-const arr = [1, 2, 3, 4, 5]
-const copy = [...arr] // or arr.slice()
+const arr = [1, 2, 3, 4, 5];
+const copy = [...arr]; // or arr.slice()
 ```
 
 ### sort
@@ -480,17 +481,17 @@ const copy = [...arr] // or arr.slice()
 Yes, `sort` modifies the original array. In fact, it sorts the elements of an array in place. The default sorting method transforms all the elements into strings and sort them alphabetically:
 
 ```javascript
-const names = ["john", "mary", "gary", "anna"]
-names.sort()
-console.log(names) // ['anna', 'gary', 'john', 'mary']
+const names = ["john", "mary", "gary", "anna"];
+names.sort();
+console.log(names); // ['anna', 'gary', 'john', 'mary']
 ```
 
 So be careful if you come from a Python background for example, doing `sort` on a numbers array just won't give you what you expected to:
 
 ```javascript
-const numbers = [23, 12, 17, 187, 3, 90]
-numbers.sort()
-console.log(numbers) // [12, 17, 187, 23, 3, 90] 🤔
+const numbers = [23, 12, 17, 187, 3, 90];
+numbers.sort();
+console.log(numbers); // [12, 17, 187, 23, 3, 90] 🤔
 ```
 
 Then, how to sort the array? Well, `sort` accepts one function, a **comparison function**. This function accepts two parameters: the first element (let's call it `a`) and the second element for comparison (`b`). The comparison between these two elements need to return a number:
@@ -502,9 +503,9 @@ Then, how to sort the array? Well, `sort` accepts one function, a **comparison f
 Then you can sort numbers that way:
 
 ```javascript
-const numbers = [23, 12, 17, 187, 3, 90]
-numbers.sort((a, b) => a - b)
-console.log(numbers) // [3, 12, 17, 23, 90, 187]
+const numbers = [23, 12, 17, 187, 3, 90];
+numbers.sort((a, b) => a - b);
+console.log(numbers); // [3, 12, 17, 23, 90, 187]
 ```
 
 Or you can sort dates by the most recent:
@@ -517,9 +518,9 @@ const posts = [
   },
   { title: "How to get better at writing CSS", date: new Date(2018, 06, 17) },
   { title: "JavaScript arrays", date: new Date() },
-]
-posts.sort((a, b) => a.date - b.date) // Substracting two dates returns the difference in millisecond between them
-console.log(posts)
+];
+posts.sort((a, b) => a.date - b.date); // Substracting two dates returns the difference in millisecond between them
+console.log(posts);
 // [ { title: 'How to get better at writing CSS',
 //     date: 2018-07-17T00:00:00.000Z },
 //   { title: 'Create a Discord bot under 15 minutes',
@@ -539,11 +540,11 @@ function fakeUser() {
   return {
     id: "fe38",
     name: "thomas",
-  }
+  };
 }
 
-const posts = Array(3).fill(fakeUser())
-console.log(posts) // [{ id: "fe38", name: "thomas" }, { id: "fe38", name: "thomas" }, { id: "fe38", name: "thomas" }]
+const posts = Array(3).fill(fakeUser());
+console.log(posts); // [{ id: "fe38", name: "thomas" }, { id: "fe38", name: "thomas" }, { id: "fe38", name: "thomas" }]
 ```
 
 ### reverse
@@ -551,10 +552,10 @@ console.log(posts) // [{ id: "fe38", name: "thomas" }, { id: "fe38", name: "thom
 I think the method's name is pretty clear here. However, keep in mind that just like `sort` does, `reverse` reverses the array in place!
 
 ```javascript
-const numbers = [1, 2, 3, 4, 5]
+const numbers = [1, 2, 3, 4, 5];
 
-numbers.reverse()
-console.log(numbers) // [5, 4, 3, 2, 1]
+numbers.reverse();
+console.log(numbers); // [5, 4, 3, 2, 1]
 ```
 
 ### pop
@@ -562,10 +563,10 @@ console.log(numbers) // [5, 4, 3, 2, 1]
 That one removes the last element from an array and returns it.
 
 ```javascript
-const messages = ["Hello", "Hey", "How are you?", "I'm fine"]
-const lastMessage = messages.pop()
-console.log(messages) // ['Hello', 'Hey', 'How are you?']
-console.log(lastMessage) // I'm fine
+const messages = ["Hello", "Hey", "How are you?", "I'm fine"];
+const lastMessage = messages.pop();
+console.log(messages); // ['Hello', 'Hey', 'How are you?']
+console.log(lastMessage); // I'm fine
 ```
 
 ## Methods you can replace
@@ -577,31 +578,31 @@ Finally, in this last section, you'll find methods that mutates the original arr
 This is a widely used method when working with arrays. In fact `push` allows you to add one or more elements to an array. It is also usually used to build a new array based on an old one.
 
 ```javascript
-const todoItems = [1, 2, 3, 4, 5]
+const todoItems = [1, 2, 3, 4, 5];
 
-const itemsIncremented = []
+const itemsIncremented = [];
 for (let i = 0; i < items.length; i++) {
-  itemsIncremented.push(items[i] + 1)
+  itemsIncremented.push(items[i] + 1);
 }
 
-console.log(itemsIncremented) // [2, 3, 4, 5, 6]
+console.log(itemsIncremented); // [2, 3, 4, 5, 6]
 
-const todos = ["Write an article", "Proofreading"]
-todos.push("Publish the article")
-console.log(todos) // ['Write an article', 'Proofreading', 'Publish the article']
+const todos = ["Write an article", "Proofreading"];
+todos.push("Publish the article");
+console.log(todos); // ['Write an article', 'Proofreading', 'Publish the article']
 ```
 
 If you need to build an array based on another just like `itemsIncremented`, chances are that there is a method made for it like our good friends `map`, `filter` or `reduce`. In fact we can use `map` to do the same:
 
 ```javascript
-const itemsIncremented = todoItems.map((x) => x + 1)
+const itemsIncremented = todoItems.map((x) => x + 1);
 ```
 
 And if you want to use `push` when you need to add a new element, the spread operator got your back:
 
 ```javascript
-const todos = ["Write an article", "Proofreading"]
-console.log([...todos, "Publish the article"]) // ['Write an article', 'Proofreading', 'Publish the article']
+const todos = ["Write an article", "Proofreading"];
+console.log([...todos, "Publish the article"]); // ['Write an article', 'Proofreading', 'Publish the article']
 ```
 
 ### splice
@@ -609,29 +610,29 @@ console.log([...todos, "Publish the article"]) // ['Write an article', 'Proofrea
 `splice` is often used as a way to remove an element at a certain index. You can actually do the same with `filter`:
 
 ```javascript
-const months = ["January", "February", "March", "April", " May"]
+const months = ["January", "February", "March", "April", " May"];
 
 // With splice
-months.splice(2, 1) // remove one element at index 2
-console.log(months) // ['January', 'February', 'April', 'May']
+months.splice(2, 1); // remove one element at index 2
+console.log(months); // ['January', 'February', 'April', 'May']
 
 // Without splice
-const monthsFiltered = months.filter((month, i) => i !== 3)
-console.log(monthsFiltered) // ['January', 'February', 'April', 'May']
+const monthsFiltered = months.filter((month, i) => i !== 3);
+console.log(monthsFiltered); // ['January', 'February', 'April', 'May']
 ```
 
 And now you might think, yeah but If I need to remove many elements? Well, use `slice`:
 
 ```javascript
-const months = ["January", "February", "March", "April", " May"]
+const months = ["January", "February", "March", "April", " May"];
 
 // With splice
-months.splice(1, 3) // remove three elements starting at index 1
-console.log(months) // ['January', 'May']
+months.splice(1, 3); // remove three elements starting at index 1
+console.log(months); // ['January', 'May']
 
 // Without splice
-const monthsSliced = [...months.slice(0, 1), ...months.slice(4)]
-console.log(monthsSliced) // ['January', 'May']
+const monthsSliced = [...months.slice(0, 1), ...months.slice(4)];
+console.log(monthsSliced); // ['January', 'May']
 ```
 
 ### shift
@@ -639,17 +640,17 @@ console.log(monthsSliced) // ['January', 'May']
 `shift` removes the first element of an array and returns it. To do it the functional way, you can use spread/rest:
 
 ```javascript
-const numbers = [1, 2, 3, 4, 5]
+const numbers = [1, 2, 3, 4, 5];
 
 // With shift
-const firstNumber = numbers.shift()
-console.log(firstNumber) // 1
-console.log(numbers) // [2, 3, 4, 5]
+const firstNumber = numbers.shift();
+console.log(firstNumber); // 1
+console.log(numbers); // [2, 3, 4, 5]
 
 // Without shift
-const [firstNumber, ...numbersWithoutOne] = numbers
-console.log(firstNumber) // 1
-console.log(numbersWithoutOne) // [2, 3, 4, 5]
+const [firstNumber, ...numbersWithoutOne] = numbers;
+console.log(firstNumber); // 1
+console.log(numbersWithoutOne); // [2, 3, 4, 5]
 ```
 
 ### unshift
@@ -657,15 +658,15 @@ console.log(numbersWithoutOne) // [2, 3, 4, 5]
 Unshift allows you to add one or more elements to the beginning of an array. Well just like `shift`, you can use the spread operator to do such a thing:
 
 ```javascript
-const numbers = [3, 4, 5]
+const numbers = [3, 4, 5];
 
 // With unshift
-numbers.unshift(1, 2)
-console.log(numbers) // [1, 2, 3, 4, 5]
+numbers.unshift(1, 2);
+console.log(numbers); // [1, 2, 3, 4, 5]
 
 // Without unshift
-const newNumbers = [1, 2, ...numbers]
-console.log(newNumbers) // [1, 2, 3, 4, 5]
+const newNumbers = [1, 2, ...numbers];
+console.log(newNumbers); // [1, 2, 3, 4, 5]
 ```
 
 ## TL;DR
