--- a/content/blog/why-learn-design-developer/index.mdx
+++ b/content/blog/why-learn-design-developer/index.mdx
@@ -5,6 +5,7 @@ date: "2020-04-20"
 cover: "./cover.jpg"
 next: /how-to-suck-less-at-colors/
 tags: [design, career]
+canonical: https://thomlom.medium.com/why-learning-design-is-important-for-front-end-developers-af44024ee492
 ---
 
 A few months ago, I decided to learn UI and UX design. I've always been impressed at stunning mockups I saw on [Dribbble](https://dribbble.com/). So, I thought it would be great to get a glimpse of what you need to do to achieve great designs. I made this decision with pure curiosity. Along the way, I learned about colors, spacing, typography, and more!
