--- a/content/blog/writing-blazing-fast-HTML-code/index.mdx
+++ b/content/blog/writing-blazing-fast-HTML-code/index.mdx
@@ -5,6 +5,7 @@ description: Maybe you think HTML code is tedious to write, and I agree. That's 
 date: "2018-06-21"
 cover: "./cover.jpeg"
 tags: [html, tools]
+canonical: https://thomlom.medium.com/writing-blazing-fast-html-code-97d19413af41
 ---
 
 Let’s assume you want to write an items list. Well, this piece of code:
