--- a/content/blog/3-ways-boost-web-app-performance/index.mdx
+++ b/content/blog/3-ways-boost-web-app-performance/index.mdx
@@ -4,6 +4,7 @@ description: Web performance matters. Find out how you can boost your web applic
 date: "2019-11-06"
 cover: "./cover.jpg"
 tags: [javascript]
+canonical: https://thomlom.medium.com/3-easy-ways-to-boost-your-web-application-performance-20534eb076e3
 ---
 
 When building a web application, there's something you absolutely need to take account: **performance.** Your app may be greatly designed or have some killer features, nobody will use it if it's not performant. Users are not patient. But how can one make an app more performant? Well, the less your browser has stuff to do, the faster it will be, right? Then, a great strategy to boost your app performance is to give the browser less work, that is to say, reduce the amount of stuff to load. There are easy ways to do so and we'll take a look at three of them today.
@@ -33,12 +34,12 @@ To solve this problem, you can use code splitting: _“lazy-load”_ just the th
 One common strategy is to split your code based on your different routes. Let's take the example of a fake store app:
 
 ```jsx
-import { BrowserRouter as Router, Route, Switch } from "react-router-dom"
-import React, { Suspense, lazy } from "react"
+import { BrowserRouter as Router, Route, Switch } from "react-router-dom";
+import React, { Suspense, lazy } from "react";
 
-const Products = lazy(() => import("./Products"))
-const Cart = lazy(() => import("./Cart"))
-const Settings = lazy(() => import("./Settings"))
+const Products = lazy(() => import("./Products"));
+const Cart = lazy(() => import("./Cart"));
+const Settings = lazy(() => import("./Settings"));
 
 const App = () => (
   <Router>
@@ -50,7 +51,7 @@ const App = () => (
       </Switch>
     </Suspense>
   </Router>
-)
+);
 ```
 
 With that approach, if the users want to browse your products, they won't need to load the code associated to the Cart or the Settings page.
